# Minimal-FVS-FPT

./: .gitignore  DFVS  FVS-C.py  FVS.py  Generating graphs.py  Minimal FVS.py  README.md  Reductions.py  example.ipynb  main.py  pyproject.toml
code/: disjoint_fvs_problem.py  fvs_compression_problem.py  generate_graphs.py  minimal_fvs_problem.py  utils.py
src/minimal_fvs_fpt/: __init__.py  compression.py  disjoint_fvs_problem.py  fvs_compression_problem.py  minimal_fvs_problem.py  solver.py  utils.py
tests/: test.py  test_compression.py  test_disjoint_fvs_problem.py  test_fvs_compression_problem.py  test_minimal_fvs_problem.py  test_solver.py  test_utils.py
